fix spacing

--- a/src/app/pages/token/token-detail/token-content/token-content-tab/token-transfers-tab/token-transfers-tab.component.scss
+++ b/src/app/pages/token/token-detail/token-content/token-content-tab/token-transfers-tab/token-transfers-tab.component.scss
@@ -2,13 +2,13 @@
   min-width: 170px;
   display: inline-block;
   @media (max-width: 991.99px) {
-    min-width: 140px;
+    min-width: 160px;
   }
 }
 .box-token-transfer {
-  justify-content: center;
+  justify-content: start;
   min-width: 80px;
-  margin-right: 20px;
+  margin-left: 32px;
   display: flex;
   .token-transfer-status {
     display: inline-flex;
